--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,10 @@
 /.web-server-pid
 ###< symfony/web-server-bundle ###
 
-/.idea
+.idea
+###> symfony/webpack-encore-pack ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-pack ###
