--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,16 @@
 security:
+    encoders:
+            App\Entity\User:
+                algorithm: bcrypt
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: ~ }
+        our_db_provider:
+            entity:
+                class: App\Entity\User
+                property: username
+                # if you're using multiple entity managers
+                # manager_name: customer
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
