Login Form and security

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,24 +1,21 @@
 security:
-    encoders:
-            App\Entity\User:
-                algorithm: bcrypt
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        our_db_provider:
+        tweet_provider:
             entity:
                 class: App\Entity\User
-                property: username
-                # if you're using multiple entity managers
-                # manager_name: customer
+                property: email
+
+    encoders:
+        App\Entity\User:
+            algorithm: bcrypt
+            cost: 12
 
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            pattern:    ^/
-            http_basic: ~
-            provider: our_db_provider
             anonymous: true
 
             # activate different ways to authenticate
@@ -26,11 +23,24 @@ security:
             # http_basic: true
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
+            form_login:
+                login_path: login
+                check_path: login
+
+            logout:
+                path:   /logout
+                target: /
+                invalidate_session: true
             # form_login: true
             # https://symfony.com/doc/current/security/form_login_setup.html
+
+            provider: tweet_provider
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
